--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <img class="header__logo" src="images/header-logo.svg" alt="Карта России">
     <ul class="header__lang-links">
-      <li>
+      <li class="hello">
         <a class="header__lang-link header__lang-link_enabled" target="_blank" href="#">Ru</a>
       </li>
       <li>
@@ -62,7 +62,7 @@
     </section>
     <section class="places">
       <article class="place">
-        <h3 class="place__title">Куршская коса</h3>
+        <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" target="_blank" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -135,18 +135,20 @@
           <a class="place__link" target="_blank" href="http://vodlozero.ru">http://vodlozero.ru</a>
         </div>
         <img class="place__image" src="images/place-karelia.jpg" alt="Река">
-        <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+        <div class="place__paragraphs">
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
           лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
           национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
           полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В
           девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли
           помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
       </article>
     </section>
     <section class="cover">
       <a class="cover__link" target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <div class="cover__background">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала
             на электричках.</p>
         </div>
